I have completed the assignment.

--- a/common-elements/index.html
+++ b/common-elements/index.html
@@ -13,7 +13,9 @@
           <a href="./index.html">Common Elements</a>
         </li>
         <li>
-          <a href="./../anatomy-and-navigation/index.html">Anatomy and Navigation</a>
+          <a href="./../anatomy-and-navigation/index.html"
+            >Anatomy and Navigation</a
+          >
         </li>
         <li>
           <a href="./../card/index.html">Card</a>
@@ -25,8 +27,8 @@
     </nav>
     <h1>Common Elements</h1>
     <p>
-      This is the page that matches up with the Common Elements art board. Replicate the semantic
-      HTML structure of the art board in the space below.
+      This is the page that matches up with the Common Elements art board.
+      Replicate the semantic HTML structure of the art board in the space below.
     </p>
     <p>
       <a
@@ -35,7 +37,7 @@
         >View the Art Board</a
       >
     </p>
-
+<main>
     <!--
       1
       TODO: Make a div element
@@ -43,56 +45,62 @@
       Children: h1, h2, h3, h4, h5, h6, p
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div
     -->
-
-    <!--
+    <div>
+      <!--
       2
       TODO: Make an h1 element
       Annotation: 2
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h1
     -->
+      <h1>Lorem Ipsum</h1>
 
-    <!--
+      <!--
       3
       TODO: Make an h2 element
       Annotation: 3
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h2
     -->
+      <h2>Lorem Ipsum</h2>
 
-    <!--
+      <!--
       4
       TODO: Make an h3 element
       Annotation: 4
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h3
     -->
+      <h3>Lorem Ipsum</h3>
 
-    <!--
+      <!--
       5
       TODO: Make an h4 element
       Annotation: 5
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h4
     -->
+      <h4>Lorem Ipsum</h4>
 
-    <!--
+      <!--
       6
       TODO: Make an h5 element
       Annotation: 6
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h5
     -->
+      <h5>Lorem Ipsum</h5>
 
-    <!--
+      <!--
       7
       TODO: Make an h6 element
       Annotation: 7
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h6
     -->
+      <h6>Lorem Ipsum</h6>
 
-    <!--
+      <!--
       8
       TODO: Make a p element
       Annotation: 8
@@ -103,8 +111,13 @@
         morbi
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p
     -->
+      <p>
+        Posuere cubilia erat iaculis fermentum praesent eu velit eget
+        scelerisque maecenas ex vehicula in <b>vestibulum</b> odio nullam
+        lobortis tincidunt mauris donec vulputate lacus <i>sodales</i>
+        morbi
 
-    <!--
+        <!--
       9
       TODO: Make a b element
       Annotation: 9
@@ -112,23 +125,30 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/b
     -->
 
-    <!--
+        <!--
       10
       TODO: Make an i element
       Annotation: 10
       Text: sodales
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/i
     -->
-
-    <!--
+      </p>
+      <!--
       11
       TODO: Make a div element
       Annotation: 11
       Children: ul, ol, address, a, input, select
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div
     -->
+      <div>
+        <ul>
+          <li>Apple</li>
+          <li>Banana</li>
+          <li>Orange</li>
+        </ul>
+      
 
-    <!--
+      <!--
       12
       TODO: Make an ul element
       Annotation: 12
@@ -136,7 +156,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul
     -->
 
-    <!--
+      <!--
       13
       TODO: Make a li element
       Annotation: 13
@@ -144,7 +164,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       14
       TODO: Make a li element
       Annotation: 14
@@ -152,7 +172,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       15
       TODO: Make a li element
       Annotation: 15
@@ -160,15 +180,19 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       16
       TODO: Make an ol element
       Annotation: 16
       Children: li, li, li
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol
-    -->
+    --><ol>
+      <li>Do this</li>
+      <li>Do that</li>
+      <li>Start Over</li>
+    </ol>
 
-    <!--
+      <!--
       17
       TODO: Make a li element
       Annotation: 17
@@ -176,7 +200,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       18
       TODO: Make a li element
       Annotation: 18
@@ -184,7 +208,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       19
       TODO: Make a li element
       Annotation: 19
@@ -192,15 +216,15 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       20
       TODO: Make an address element
       Annotation: 20
       Text: 1600 Pennsylvania Ave NW, Washington, DC, 20500
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/address
-    -->
+    --><address>1600 Pennsylvania Ave NW, Washington, DC, 20500</address>
 
-    <!--
+      <!--
       21
       TODO: Make an a element
       Annotation: 21
@@ -210,9 +234,10 @@
         - title: Visit Reddit
         - target: _blank
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a
-    -->
-
-    <!--
+    --><a href="https://reddit.com">Click Here to Visit Reddit.com</a>
+<br>
+<br>
+      <!--
       22
       TODO: Make an input element
       Annotation: 22
@@ -220,17 +245,31 @@
         - type: text
         - placeholder: Type in your favorite color
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input
-    -->
+    --><label for="Type in your favorite color"> Type in your favorite color:</label>
 
-    <!--
+<input type="text" id="name" name="name" required
+minlength="4" maxlength="8" size="10">
+<br>
+<br>
+      <!--
       23
       TODO: Make a select element
       Annotation: 23
       Children: option, option, option
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/select
-    -->
+    --><label for="option-select">Choose an option:</label>
 
-    <!--
+<select name="option" id="option-select">
+  <option value="">--Please choose an option--</option>
+  <option value="blue">Blue</option>
+  <option value="red">Red</option>
+  <option value="yellow">Yellow</option>
+
+</select>
+<br>
+<br>
+
+      <!--
       24
       TODO: Make an option element
       Annotation: 23
@@ -240,7 +279,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option
     -->
 
-    <!--
+      <!--
       25
       TODO: Make an option element
       Annotation: 23
@@ -250,7 +289,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option
     -->
 
-    <!--
+      <!--
       26
       TODO: Make an option element
       Annotation: 23
@@ -259,16 +298,29 @@
         - value: yellow
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option
     -->
-
-    <!--
+  </div>
+      <!--
       27
       TODO: Make a div element
       Annotation: 24
       Children: img, video
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div
-    -->
+    --><div>
 
-    <!--
+      <img class="fit-picture"
+     src="loops.jpg"
+     alt="bröther may i have some lööps" width="100%">
+
+     <video controls width="100%">
+
+      <source src="hey-man-sings.mp4"
+              type="video/mp4"> 
+  </video>
+
+
+    </div>
+
+      <!--
       28
       TODO: Make a img element
       Annotation: 25
@@ -279,7 +331,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
     -->
 
-    <!--
+      <!--
       29
       TODO: Make a video element
       Annotation: 26
@@ -289,8 +341,8 @@
         - width: 100%
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/video
     -->
-
-    <!--
+  
+      <!--
       30
       TODO: Make a source element
       Annotation: 26
@@ -298,6 +350,8 @@
         - src: hey-man-sings.mp4 (figure out the relative path)
         - type: video/mp4
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/source
-    -->
+   
+    --></div>
   </body>
+</main>
 </html>
